# herald

./: DESIGN.md  README.md  pyproject.toml
data/: herald-receiver.desktop
examples/: cli.sh  python_api.py
scripts/: install.sh  net-install.sh  net-uninstall.sh  uninstall.sh
src/herald/: __init__.py  __main__.py  cli.py  inotify.py  receiver.py  sender.py
tests/: test_inotify.py  test_receiver.py  test_sender.py
